rust/macros/tests/invalid/target/debug/deps/macros-656f9460fbefe23f.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/macros-656f9460fbefe23f.rmeta: /home/anthony/repos/github.com/playground/exercism/rust/macros/src/lib.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/libmacros-656f9460fbefe23f.rlib: /home/anthony/repos/github.com/playground/exercism/rust/macros/src/lib.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/macros-656f9460fbefe23f.d: /home/anthony/repos/github.com/playground/exercism/rust/macros/src/lib.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/src/lib.rs:
